--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   		<div class="top-header">
   			<div class="container">
   				<div class="row">
-  					<div class="col-md-6">
+  					<div class="col-6">
   						<ul class="info-inner">
   							<li>
   								<a href="#"><i class="fa fa-envelope-o"></i> info@reen.com</a>
@@ -35,7 +35,7 @@
   							</li>
   						</ul>
   					</div>
-  					<div class="col-md-6">
+  					<div class="col-6">
   						<ul class="social-icons">
   							<li>
   								<a href="#"><i class="fa fa-facebook"></i></a>
@@ -117,7 +117,7 @@
           </div>
           <div class="carousel-item">
             <img src="images/s2.png" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block ">
+            <div class="carousel-caption d-none d-md-block s2">
               <h2>Fresh and <br/>beautiful design</h2>
               <p>REEN is designed to showcase your talent and put your work in the forefront.<br/>  Professionally use of typography and layout that fits your content.</p>
               <a href="#" class="btn btn-info">get started now</a>
@@ -284,7 +284,7 @@
     <section class="footer-top-section">
       <div class="container">
         <div class="row">
-          <div class="col-md-3">
+          <div class="col-3 cwiz">
             <div class="widget">
               <h4>WHO WE ARE</h4>
               <img src="images/flogo.png" alt="">
@@ -292,12 +292,12 @@
               <a href="#" class="link">More about us<i class="fa fa-arrow-right"></i></a>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-3 cwiz icard">
             <div class="widget">
               <h4>LATEST WORKS</h4>
               <div class="row">
-                <div class="com-sm-12 no-mar">
-                  <div class="card-group">
+                <!-- <div class="com-sm-12 no-mar"> -->
+                  <div class="card-group iwiz">
                     <div class="card">
                       <img src="images/fl1.png" class="card-img-top" alt="...">
                     </div>
@@ -305,10 +305,10 @@
                       <img src="images/fl2.png" class="card-img-top" alt="...">
                     </div>
                   </div>
-                </div>
+                <!-- </div> -->
 
-                <div class="com-sm-12 no-mar">
-                  <div class="card-group">
+                <!-- <div class="com-sm-12 no-mar"> -->
+                  <div class="card-group iwiz">
                     <div class="card">
                       <img src="images/fl3.png" class="card-img-top" alt="...">
                     </div>
@@ -316,18 +316,18 @@
                       <img src="images/fl4.png" class="card-img-top" alt="...">
                     </div>
                   </div>
-                </div>
+                <!-- </div> -->
               </div>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-3 cwiz g">
             <div class="widget">
               <h4>GET IN TOUCH</h4>
               <p>Doloreiur quia commolu ptatemp dolupta oreprerum tibusam eumenis et consent accullignis dentibea autem inisita.</p>
               <p><i class="fa fa-map-marker"></i>84 Street, City, State 24813 <br/> <i class="fa fa-mobile"></i>+00 (123) 456 78 90 <br> <i class="fa fa-envelope-o"></i>info@reen.com</p> 
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-3 cwiz f">
             <div class="widget">
               <h4>FREE UPDATES</h4>
               <p>Conecus iure posae volor remped modis<br/>aut lor volor accabora incim resto explabo.</p>
@@ -348,6 +348,7 @@
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
           <p>&copy; 2014 REEN. All rights reserved.</p>
+          
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -394,13 +395,13 @@
           margin:10,
           nav:false,
           autoplay:true,
-          autoplayTimeout:5000,
+          autoplayTimeout:8000,
           responsive:{
               0:{
                   items:1
               },
               600:{
-                  items:2
+                  items:3
               },
               1000:{
                   items:4
