--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 wow fadeInDown" data-wow-duration="1s"">
+          <div class="col-md-4 wow fadeInDown" data-wow-duration="1s">
             <div class="media">
               <img src="images/ic-2.png" alt="...">
               <div class="media-body">
@@ -173,7 +173,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 wow fadeInDown" data-wow-duration="1s"">
+          <div class="col-md-4 wow fadeInDown" data-wow-duration="1s">
             <div class="media">
               <img src="images/ic-3.png" alt="...">
               <div class="media-body">
